kubernetes/apps/elastic-system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
