kubernetes/apps/elastic-system/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: elastic-system
  annotations:
    external-dns.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kibana.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: kibana-kb-http
          port: 5601
          scheme: https
          serversTransport: kibana-transport
  tls: {}
